--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "tailwindcss": "^3.4.1",
     "vite": "^4.2.0"
   }
 }
